# 2D_interp

./: CMakeLists.txt  README.md
sources/: bilinear_interpol.cpp  bilinear_interpol.h  data.h  main.cpp  str.cpp  str.h
tests/: CMakeLists.txt  Interpoler_tests  unit_tests.cpp
